write header html

--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Molle:ital@1&family=Raleway:ital,wght@0,400;0,600;1,200;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Molle:ital@1&family=Raleway:ital,wght@0,400;0,600;0,700;1,200&display=swap"
+      rel="stylesheet"
+    />
     <title>Nifty Knits - A Knitting Blog</title>
   </head>
   <body>
     <header>
       <div class="container">
-        <img class="logo" src="img/heart_yarn.svg" alt="Nifty Knits">
+        <img class="logo" src="img/heart_yarn.svg" alt="Nifty Knits" />
         <div class="inner-container">
           <div class="blog-title">Nifty Knits</div>
           <nav>
@@ -23,7 +26,9 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      
+    </main>
     <footer></footer>
   </body>
 </html>
