intro and card at home

--- a/index.html
+++ b/index.html
@@ -27,7 +27,29 @@
       </div>
     </header>
     <main>
-      
+      <section class="intro">
+        <h1>Welcome</h1>
+        <p>
+          Let me introduce you to the world of <b>Knitting</b>. Here you can
+          find all the projects I finished so far and many tutorials on how to
+          do them yourself. From <i>baby hats</i> and <i>baby clothes</i> over
+          cozy <i>scarfs</i> and fluffy <i>mittens</i> to super chic
+          <i>socks</i> and <i>hats</i> to die for.
+        </p>
+      </section>
+      <section class="preview">
+        <div class="card">
+          <figure class="card-img-container">
+            <img src="img/blanket.jpg" alt="Pug Otto wearing a blanket" class="card-img">
+            <figcaption class="card-img-caption">Otto wearing the new blanket Carina and contemplating about life.</figcaption>
+          </figure>
+          <h2 class="card-title">Blanket Carina</h2>
+          <p class="card-teaser">
+            This blanket is cozy but at the same time not too warm. So it is perfect if some summer evenings should get a bit too chilly.
+          </p>
+          <a class="button card-button" href="">more</a>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
