finishing home page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </div>
       </div>
     </header>
+    <section class="hero"></section>
     <main>
       <section class="intro">
         <h1>Welcome</h1>
@@ -43,11 +44,45 @@
             <img src="img/blanket.jpg" alt="Pug Otto wearing a blanket" class="card-img">
             <figcaption class="card-img-caption">Otto wearing the new blanket Carina and contemplating about life.</figcaption>
           </figure>
-          <h2 class="card-title">Blanket Carina</h2>
-          <p class="card-teaser">
-            This blanket is cozy but at the same time not too warm. So it is perfect if some summer evenings should get a bit too chilly.
-          </p>
-          <a class="button card-button" href="">more</a>
+          <div class="card-text-container">
+            <div class="card-text">
+              <h2 class="card-title"><a href="#">Blanket Carina</a></h2>
+              <p class="card-teaser">
+                This blanket is cozy but at the same time not too warm. So it is perfect if some summer evenings should get a bit too chilly.
+              </p>
+            </div>
+            <a class="button card-button" href="#">more</a>
+          </div>
+        </div>
+        <div class="card">
+          <figure class="card-img-container">
+            <img src="img/cardigan.jpg" alt="cardigan celebrated with sparkler" class="card-img">
+            <figcaption class="card-img-caption">A cardigan so comfy, it has to be celebrated.</figcaption>
+          </figure>
+          <div class="card-text-container">
+            <div class="card-text">
+              <h2 class="card-title"><a href="#">Cardigan Babs</a></h2>
+              <p class="card-teaser">
+                The perfect spring and autnum cardigan. Unpretentious and pretty - a must-have for everyones closet and a good project for your first knitted cardigan.
+              </p>
+            </div>
+            <a class="button card-button" href="#">more</a>
+          </div>
+        </div>
+        <div class="card">
+          <figure class="card-img-container">
+            <img src="img/beanie.jpg" alt="rippled beanie" class="card-img">
+            <figcaption class="card-img-caption">The archtype of all beanies.</figcaption>
+          </figure>
+          <div class="card-text-container">
+            <div class="card-text">
+              <h2 class="card-title"><a href="#">Beanie Michi</a></h2>
+              <p class="card-teaser">
+                Your best friend when snow starts to fall or even before. This is <strong>the</strong> beanie! It is easy to knit, very variable and a wonderful gift. And let's be honest - nobody can have too many beanies!
+              </p>
+            </div>
+            <a class="button card-button" href="#">more</a>
+          </div>
         </div>
       </section>
     </main>
