--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="favicon.ico"/>
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -12,10 +13,10 @@
     />
     <title>Nifty Knits - A Knitting Blog</title>
   </head>
-  <body>
+  <body class="home">
     <header>
       <div class="container">
-        <img class="logo" src="img/heart_yarn.svg" alt="Nifty Knits" />
+        <a href="index.html"><img class="logo" src="img/heart_yarn.svg" alt="Nifty Knits" /></a>
         <div class="inner-container">
           <div class="blog-title">Nifty Knits</div>
           <nav>
@@ -46,12 +47,12 @@
           </figure>
           <div class="card-text-container">
             <div class="card-text">
-              <h2 class="card-title"><a href="#">Blanket Carina</a></h2>
+              <h2 class="card-title"><a href="posts/post1.html">Blanket Carina</a></h2>
               <p class="card-teaser">
                 This blanket is cozy but at the same time not too warm. So it is perfect if some summer evenings should get a bit too chilly.
               </p>
             </div>
-            <a class="button card-button" href="#">more</a>
+            <a class="button card-button" href="posts/post1.html">more</a>
           </div>
         </div>
         <div class="card">
@@ -61,12 +62,12 @@
           </figure>
           <div class="card-text-container">
             <div class="card-text">
-              <h2 class="card-title"><a href="#">Cardigan Babs</a></h2>
+              <h2 class="card-title"><a href="posts/post2.html">Cardigan Babs</a></h2>
               <p class="card-teaser">
                 The perfect spring and autnum cardigan. Unpretentious and pretty - a must-have for everyones closet and a good project for your first knitted cardigan.
               </p>
             </div>
-            <a class="button card-button" href="#">more</a>
+            <a class="button card-button" href="posts/post2.html">more</a>
           </div>
         </div>
         <div class="card">
@@ -76,16 +77,35 @@
           </figure>
           <div class="card-text-container">
             <div class="card-text">
-              <h2 class="card-title"><a href="#">Beanie Michi</a></h2>
+              <h2 class="card-title"><a href="posts/post3.html">Beanie Michi</a></h2>
               <p class="card-teaser">
                 Your best friend when snow starts to fall or even before. This is <strong>the</strong> beanie! It is easy to knit, very variable and a wonderful gift. And let's be honest - nobody can have too many beanies!
               </p>
             </div>
-            <a class="button card-button" href="#">more</a>
+            <a class="button card-button" href="posts/post3.html">more</a>
           </div>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="inner-container">
+        <div class="social-media">
+          <a href="#"><img src="img/instagram.svg" alt="Instagram"></a>
+          <a href="#"><img src="img/pinterest.svg" alt="Pinterest"></a>
+          <a href="#"><img src="img/youtube.svg" alt="Youtube"></a>
+        </div>
+        <div class="footer-menu">
+          <nav>
+            <ul class="footer-nav">
+              <li class="footer-nav-item"><a href="#">Imprint</a></li>
+              <li class="footer-nav-item"><a href="#">Privacy</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="copyright">
+          © 2020 - Nifty Knits Blog
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
