removing target blank from main nav

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
           <nav class="nav-bar">
             <ul class="nav-list">
               <li class="nav-item">
-                <a class="nav-link" href="#" target="_blank">About</a>
+                <a class="nav-link" href="#">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#" target="_blank">Archive</a>
+                <a class="nav-link" href="#">Archive</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#" target="_blank">Contact</a>
+                <a class="nav-link" href="#">Contact</a>
               </li>
             </ul>
           </nav>
