replacing <a> with <button> in cards

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                 This blanket is cozy but at the same time not too warm. So it is perfect if some summer evenings should get a bit too chilly.
               </p>
             </div>
-            <a class="button card-button" href="posts/post1.html">more</a>
+            <button class="button card-button" type="button">
+              <a class="card-link" href="posts/post1.html">more</a>
+            </button>
           </div>
         </div>
         <div class="card">
@@ -75,7 +77,9 @@
                 The perfect spring and autnum cardigan. Unpretentious and pretty - a must-have for everyones closet and a good project for your first knitted cardigan.
               </p>
             </div>
-            <a class="button card-button" href="posts/post2.html">more</a>
+            <button class="button card-button" type="button">
+              <a class="card-link" href="posts/post2.html">more</a>
+            </button>
           </div>
         </div>
         <div class="card">
@@ -90,7 +94,9 @@
                 Your best friend when snow starts to fall or even before. This is <strong>the</strong> beanie! It is easy to knit, very variable and a wonderful gift. And let's be honest - nobody can have too many beanies!
               </p>
             </div>
-            <a class="button card-button" href="posts/post3.html">more</a>
+            <button class="button card-button" type="button">
+              <a class="card-link" href="posts/post3.html">more</a>
+            </button>
           </div>
         </div>
       </section>
