fixing copyrights symbol

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           </nav>
         </div>
         <div class="copyright">
-          © 2020 - Nifty Knits Blog
+          &copy; 2020 - Nifty Knits Blog
         </div>
       </div>
     </footer>
